--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "just-debounce-it": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
+    "serve": "^11.3.2",
+    "vercel": "^21.3.3",
     "web-vitals": "^1.0.1",
     "wouter": "^2.7.4"
   },
